crates/serde-feather/tests/ui/enum_variant_field_attribute.stderr
error: serde field attribute `rename` is not supported on tuple fields
 --> tests/ui/enum_variant_field_attribute.rs:5:27
  |
5 |     Pair(#[serde(rename = "left")] u8, u8),
  |                           ^^^^^^
