crates/serde-feather/tests/ui/enum_variant_field_attribute.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
enum Shape {
    Pair(#[serde(rename = "left")] u8, u8),
}

fn main() {}
